tests/errors/coarray_04.f90
program coarray_04
! Test: corank mismatch should produce error
integer :: B[3,*]
B[1] = 5
end program coarray_04
